--- a/230814/style.css
+++ b/230814/style.css
@@ -4,3 +4,11 @@
     margin:0;
     box-sizing: border-box;
 }
+/** 배경색 변경 */
+html,body{
+    width: 100%;
+    height: 100%;    
+}
+body{
+    background-color: aliceblue;
+}
